// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses empty program 1`] = `
Object {
  "body": Array [],
  "type": "Program",
}
`;

exports[`parses function call 1`] = `
Object {
  "body": Array [
    Object {
      "name": "add",
      "params": Array [
        Object {
          "type": "NumberLiteral",
          "value": "1",
        },
        Object {
          "type": "NumberLiteral",
          "value": "2",
        },
      ],
      "type": "CallExpression",
    },
  ],
  "type": "Program",
}
`;

exports[`parses nested function call 1`] = `
Object {
  "body": Array [
    Object {
      "name": "add",
      "params": Array [
        Object {
          "type": "NumberLiteral",
          "value": "1",
        },
        Object {
          "name": "sub",
          "params": Array [
            Object {
              "type": "NumberLiteral",
              "value": "2",
            },
            Object {
              "type": "NumberLiteral",
              "value": "3",
            },
          ],
          "type": "CallExpression",
        },
      ],
      "type": "CallExpression",
    },
  ],
  "type": "Program",
}
`;
